PersonFollwer_ROS2/log/build_2024-02-20_17-51-36/opencv_tools/stdout_stderr.log
running egg_info
writing ../../build/opencv_tools/opencv_tools.egg-info/PKG-INFO
writing dependency_links to ../../build/opencv_tools/opencv_tools.egg-info/dependency_links.txt
writing entry points to ../../build/opencv_tools/opencv_tools.egg-info/entry_points.txt
writing requirements to ../../build/opencv_tools/opencv_tools.egg-info/requires.txt
writing top-level names to ../../build/opencv_tools/opencv_tools.egg-info/top_level.txt
reading manifest file '../../build/opencv_tools/opencv_tools.egg-info/SOURCES.txt'
writing manifest file '../../build/opencv_tools/opencv_tools.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/ed/ros2_ws/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/motor_controller.py to motor_controller.cpython-310.pyc
  File "/home/ed/ros2_ws/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/motor_controller.py", line 4
    MAXPWM = 
             ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ed/ros2_ws/install/opencv_tools/lib/python3.10/site-packages/opencv_tools-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/opencv_tools/opencv_tools.egg-info to /home/ed/ros2_ws/install/opencv_tools/lib/python3.10/site-packages/opencv_tools-0.0.0-py3.10.egg-info
running install_scripts
Installing img_publisher script to /home/ed/ros2_ws/install/opencv_tools/lib/opencv_tools
Installing img_subscriber script to /home/ed/ros2_ws/install/opencv_tools/lib/opencv_tools
Installing tensor_img_publisher script to /home/ed/ros2_ws/install/opencv_tools/lib/opencv_tools
writing list of installed files to '/home/ed/ros2_ws/build/opencv_tools/install.log'
